Update demo programs
Create initialization demo to coincide
with wiki tutorial

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -14,3 +14,4 @@ add_executable(controls controls.cpp ${SOURCES} ${INCLUDE})
 add_executable(ecs ecs.cpp ${SOURCES} ${INCLUDE})
 add_executable(rendering rendering.cpp ${SOURCES} ${INCLUDE})
 add_executable(scenes scenes.cpp ${SOURCES} ${INCLUDE})
+add_executable(initialize initialize.cpp ${SOURCES} ${INCLUDE})
