--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 project(.)
  
- set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -lSDL2 -lSDL2_image -lSDL2_ttf -lSDL2_net -lvorbis -lvorbisfile")
+ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -g -O -lSDL2 -lSDL2_image -lSDL2_ttf -lSDL2_net -lvorbis -lvorbisfile")
 
 #Bring the headers, such as Student.h into the project
 file(GLOB_RECURSE INCLUDE "../src/*.h")
