--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -9,9 +9,9 @@ file(GLOB_RECURSE INCLUDE "../src/*.h")
 #However, the file(GLOB...) allows for wildcard additions:
 file(GLOB_RECURSE SOURCES "../src/*.cpp")
  
-add_executable(audio audio.cpp ${SOURCES} ${INCLUDE})
-add_executable(controls controls.cpp ${SOURCES} ${INCLUDE})
-add_executable(ecs ecs.cpp ${SOURCES} ${INCLUDE})
-add_executable(rendering rendering.cpp ${SOURCES} ${INCLUDE})
-add_executable(scenes scenes.cpp ${SOURCES} ${INCLUDE})
-add_executable(initialize initialize.cpp ${SOURCES} ${INCLUDE})
+add_executable(./bin/audio audio.cpp ${SOURCES} ${INCLUDE})
+add_executable(./bin/controls controls.cpp ${SOURCES} ${INCLUDE})
+add_executable(./bin/ecs ecs.cpp ${SOURCES} ${INCLUDE})
+add_executable(./bin/rendering rendering.cpp ${SOURCES} ${INCLUDE})
+add_executable(./bin/scenes scenes.cpp ${SOURCES} ${INCLUDE})
+add_executable(./bin/initialize initialize.cpp ${SOURCES} ${INCLUDE})
