--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(.)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -g -O")
 
 add_subdirectory("submodules/fmt")
+add_subdirectory("submodules/glfw")
 
 #Dynamo library files
 file(GLOB_RECURSE INCLUDE "./src/*.hpp" "./src/*.h")
@@ -14,4 +15,4 @@ add_library(Dynamo STATIC ${SOURCES} ${INCLUDE})
 target_include_directories(Dynamo PUBLIC "./src")
 
 # Link all libraries together
-target_link_libraries(Dynamo fmt)
+target_link_libraries(Dynamo fmt glfw)
