--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,15 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -g -O3")
 add_subdirectory("submodules/fmt")
 add_subdirectory("submodules/glfw")
 
+include_directories("submodules/stb")
+
 #Dynamo library files
 file(GLOB_RECURSE INCLUDE "./src/*.hpp" "./src/*.h")
 file(GLOB_RECURSE SOURCES "./src/*.cpp" "./src/*.c")
 
 # Make Dynamo a shared library
 add_library(Dynamo STATIC ${SOURCES} ${INCLUDE})
-target_include_directories(Dynamo PUBLIC "./src")
+target_include_directories(Dynamo PUBLIC "./src" "./submodules/stb")
 
 # Link all libraries together
 target_link_libraries(Dynamo fmt glfw Vulkan::Vulkan)
