Implement Sound resource and define WaveForm type

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ file(GLOB_RECURSE INCLUDE "./src/*.hpp" "./src/*.h")
 file(GLOB_RECURSE SOURCES "./src/*.cpp" "./src/*.c")
 
 # Make Dynamo a shared library
-add_library(Dynamo STATIC ${SOURCES} ${INCLUDE})
+add_library(Dynamo STATIC ${SOURCES} ${INCLUDE} "./submodules/stb/stb_vorbis.c")
 target_include_directories(Dynamo PUBLIC "./src" "./submodules/stb")
 
 # Link all libraries together
