--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "submodules/portaudio"]
 	path = submodules/portaudio
 	url = git@github.com:PortAudio/portaudio.git
+[submodule "submodules/Catch2"]
+	path = submodules/Catch2
+	url = git@github.com:catchorg/Catch2.git
