--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "submodules/Catch2"]
 	path = submodules/Catch2
 	url = git@github.com:catchorg/Catch2.git
+[submodule "submodules/libsndfile"]
+	path = submodules/libsndfile
+	url = git@github.com:libsndfile/libsndfile.git
