--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "submodules/libsndfile"]
 	path = submodules/libsndfile
 	url = git@github.com:libsndfile/libsndfile.git
+[submodule "submodules/tinyobjloader"]
+	path = submodules/tinyobjloader
+	url = git@github.com:tinyobjloader/tinyobjloader.git
