Implement Vulkan construct class wrappers
* Implement Sampler to encapsulate image preprocessing
* Implement Shader, RenderPass, PipelineLayout, and Pipeline to
defined the actual graphics rendering stages
* Install SPIRV-Reflect to detect and generate pipeline layouts
* Shorten build time by removing unnecessary builds in CMake

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "submodules/tinyobjloader"]
 	path = submodules/tinyobjloader
 	url = git@github.com:tinyobjloader/tinyobjloader.git
+[submodule "submodules/spirv-reflect"]
+	path = submodules/spirv-reflect
+	url = git@github.com:KhronosGroup/SPIRV-Reflect.git
