--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,7 +12,7 @@ add_subdirectory("../" "./Dynamo")
 add_subdirectory("../submodules/Catch2" "./Catch2")
 
 # Compile each demo
-file(GLOB TESTS "./src/*.cpp")
+file(GLOB_RECURSE TESTS "./src/*.cpp")
 foreach(test_path ${TESTS})
     get_filename_component(test ${test_path} NAME_WE)
     add_executable(${test} ${test_path})
