Restructure Jukebox subsystem
* Have only 1 type of Material
* Implement FilterSequence
* Let filters be optional

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,6 +5,7 @@ include(CTest)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED on)
 set(CMAKE_C_STANDARD_REQUIRED on)
+set(BUILD_TESTING off)
 
 add_compile_options(-Wall -g -O3 -fPIC)
 
