--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED on)
 set(CMAKE_C_STANDARD_REQUIRED on)
 
-add_compile_options(-Wall -g -O3 -fPIC)
+add_compile_options(-Wall -g -O3 -fPIC -march=native)
 
 find_package(Vulkan REQUIRED glslangValidator)
 
