Reduce CI times by building Dynamo once for tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,11 @@ project(.)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED on)
 set(CMAKE_C_STANDARD_REQUIRED on)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_compile_options(-Wall -g -O3 -fPIC -march=native)
 
-find_package(Vulkan REQUIRED glslangValidator)
+find_package(Vulkan REQUIRED)
 
 execute_process(COMMAND "submodules/shaderc/utils/git-sync-deps")
 
